--- a/Practica4/index.html
+++ b/Practica4/index.html
@@ -19,7 +19,7 @@
     <header class="text-center">
         <img class="img-kenny" src="Imgs/KennyFoto.jpg" alt="Foto del funado, Kenny">
         <h1> Kenneth Álvarez del Castillo Nava</h1>
-        <p> Hola soy Kenny, tengo 19 años, soy fan de Jojo y Yakuza, y ya luego pienso que más poner lol</p>
+        <p class="text-center"> Hola soy Kenny, tengo 19 años, soy fan de Jojo y Yakuza, me gusta dibujar de vez en cuando y jugar videojuegos, sobre todo Splatoon, juego multijugador del año, aunque los servidores de Nintendo no sirvan pa nada, y ya no se que más puedo poner lol</p>
     </header>
     <hr class="lineas">
 
